@@ -2,7 +2,8 @@
 
 	* src/SDCCsymt.h,
 	  src/SDCC.y,
-	  src/SDCCopt.c:
+	  src/SDCCopt.c,
+	  src/SDCCicode.c:
 	  Preparations for named address space support.
 
 2011-11-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
